--- a/templates/result.html
+++ b/templates/result.html
@@ -1,73 +1,47 @@
-{% extends './index.html' %}
-    {% block content %}
 <head>
-	<!-- Load plotly.js into the DOM -->
-	<script src='https://cdn.plot.ly/plotly-2.6.3.min.js'></script>
-</head>
-        <div class="content">
-            <div class="page-wrapper">
-                <div class="content">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <h4 class="page-title">Kết Quả Phân Tích</h4>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="card-box">
-                                <h2 class="card-title">Các thông số của phổi</h2>
-                                <h3>Thể tích phổi trái: {{left_lung}} mm</h3> 
-                                <h3>Thể tích phổi phải: {{right_lung}} mm </h3>
-                                <h3>Thể tích toàn phổi: {{lung_volume}} mm</h3> 
-                                
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="card-box">
-                                <h4 class="card-title">Mô hình 3D lá phổi</h4>
-                                	<div id='myDiv'><!-- Plotly chart will be drawn inside this DIV --></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-<script>
-    var data = [{
-        type: "mesh3d",
-        z: {{x}},
-        y: {{y}},
-        x: {{z}},
-        i: {{d}},
-        j: {{e}},
-        k: {{f}},
-        intensity: [0, 0.33, 0.66, 1],
-        colorscale: [
-          [0, 'rgb(0, 158, 251)'],
-          [0.5, 'rgb(0, 158, 251)'],
-          [1, 'rgb(0, 158, 251)']
-        ]
+    <!-- Load plotly.js into the DOM -->
+    <script src="https://cdn.plot.ly/plotly-2.6.3.min.js"></script>
+  </head>
+  <div
+    id="myDiv"
+    style="position: relative; width: 700px; height: 700px; margin: 0 auto"
+  
+    <!-- Plotly chart will be drawn inside this DIV -->
+  </div>
+  <script>
+       var data = [{
+           type: "mesh3d",
+           y: {{x}},
+           x: {{y}},
+           z: {{z}},
+           i: {{d}},
+           j: {{e}},
+           k: {{f}},
+          intensity: {{z}},
+          colorscale: [
+          ['0.0', 'rgb(180,1,41)'],
+          ['0.25','rgb(180,1,41)'],
+          ['0.5', 'rgb(253,106,97)'],
+          ['0.75','rgb(253,106,97)'],
+          ['1.0', 'rgb(255,160,130)']
+          ],
+         }
+       ];
+     var layout = {
+      autosize: false,
+      width: 700,
+      height: 700,
+      xaxis: {
+         autorange: "reversed",
+         },
+      margin: {
+        l: 100,
+        r: 100,
+        b: 100,
+        t: 100,
+        pad: 4
       }
-    ];
-  var layout = {
-	  autosize: false,
-	  width: 1000,
-	  height: 1000,
-	  xaxis: {
-      autorange: "reversed",
-      },
-	  margin: {
-		l: 100,
-		r: 100,
-		b: 100,
-		t: 100,
-		pad: 4
-	  }
-	};
-
-    Plotly.newPlot('myDiv', data, layout);
-
-</script>
-    {% endblock %}
+    };
+  
+       Plotly.newPlot('myDiv', data, layout);
+  </script>
